# SDL

./: .gitignore  .gitmodules  AsteroidShooter  CMakeLists.txt  Makefile  WinMakefile  compile_commands.json  sdl
.github/workflows/: c-cpp.yml
assets/: log4j.properties
src/: Asteroid.hpp  Asteroids.cpp  Beam.cpp  Beam.hpp  Game.cpp  Game.hpp  InitError.cpp  InitError.h  InitError.hpp  Level.hpp  Main.cpp  Menu.cpp  Menu.hpp  Settings.hpp  Ship.cpp  Ship.hpp  State.cpp  State.hpp  Util.cpp  Util.hpp  main.cpp
src/Objects/: Asteroid.hpp  Asteroids.cpp  Beam.cpp  Beam.hpp  Particle.cpp  Particle.hpp  Ship.cpp  Ship.hpp
src/Utils/: InitError.cpp  Random.cpp  Random.hpp  Util.cpp  Util.hpp
